--- a/iap/storekit-integration.mdx
+++ b/iap/storekit-integration.mdx
@@ -76,7 +76,7 @@ A common pattern is to offer web checkout as the primary option with StoreKit as
 ```swift
 struct ProductView: View {
     @State private var showPaymentSheet = false
-    let product: Product
+    let product: ZSProduct
 
     var body: some View {
         VStack(spacing: 16) {
