--- a/iap/quickstart.mdx
+++ b/iap/quickstart.mdx
@@ -55,29 +55,28 @@ struct YourApp: App {
 | Parameter | Default | Description |
 |-----------|---------|-------------|
 | `publishableKey` | Required | Your publishable key from the dashboard |
-| `environment` | `.production` | Set to `.staging` for development |
 | `syncStoreKitTransactions` | `true` | Set to `false` if using RevenueCat |
 
 ### Sandbox vs Live Mode
 
-Your publishable key determines the mode:
+Your publishable key prefix determines the mode:
 
-- **Sandbox**: Test keys — use for development. No real charges.
-- **Live**: Production keys — real payments processed.
+- **Sandbox** (`zs_pk_test_`): Use for development. No real charges.
+- **Live** (`zs_pk_live_`): Real payments processed.
 
 ## Fetch Products
 
 Fetch your product catalog with web checkout pricing:
 
 ```swift
-let products = try await ZeroSettleIAP.shared.fetchProducts(userId: currentUser.id)
+let catalog = try await ZeroSettleIAP.shared.fetchProducts(userId: currentUser.id)
 
-for product in products {
+for product in catalog.products {
     print("\(product.displayName): \(product.webPrice.formatted)")
 }
 ```
 
-Products are cached in `ZeroSettleIAP.shared.products` after fetching.
+`fetchProducts()` returns a ``ProductCatalog`` containing both the product list and remote configuration. Products are also cached in `ZeroSettleIAP.shared.products` for convenience.
 
 ## Make a Purchase
 
@@ -233,7 +232,12 @@ struct ContentView: View {
             }
         }
         .task {
-            try? await iap.fetchProducts(userId: Auth.currentUser.id)
+            let catalog = try? await iap.fetchProducts(userId: Auth.currentUser.id)
+
+            // Warm up the PaymentIntent cache for faster first open
+            if let first = catalog?.products.first {
+                await ZSPaymentSheet.warmUp(productId: first.id, userId: Auth.currentUser.id)
+            }
 
             if let entitlements = try? await iap.restoreEntitlements(
                 userId: Auth.currentUser.id
